# fingerprint-v3

./: Cargo.toml
src/: bindings.h  fingerprint.rs  main.rs
src/BMLite/: CMakeLists.txt
src/BMLite/include/: bmlite_hal.h  bmlite_if_callbacks.h  console_params.h  platform.h
src/BMLite/src/: bmlite_if.c  esp_hal.c  hcp_tiny.c  platform.c
