[package]
name = "fingerprint-v3"
version = "0.1.0"
authors = ["pilou"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "fingerprint-v3"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-sys = { version = "0.36", features = ["native"] }
anyhow = { version = "1.0", default-features = false }
lazy_static = { version = "1.5", default-features = false }

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "src/BMLite"
bindings_header = "src/bindings.h"
bindings_module = "bmlite"
